# Tarea_Corta

./: CMakeLists.txt  main.cpp
Structures/: AVL_Tree.h  BinaryNode.h  Binary_STree.h  LinkedList.h  llNode.h
sorts/: BubbleSort.h  InsertionSort.h  MergeSort.h  QuickSort.h  SelectionSort.h
